<resources>
    <string name="app_name">Activity Mobile</string>
    <string name="tEmail">Email :</string>
    <string name="tPassword">Password :</string>
    <string name="bsigin">Sign-In</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="tData">Data anda</string>
    <string name="var1">Ini Pesan</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="eRePass">Masukkan Password Kembali</string>
    <string name="eAlamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>

</resources>